--- a/PHEME-RNR/requirements.txt
+++ b/PHEME-RNR/requirements.txt
@@ -1,7 +1,8 @@
 # Core requirements
+python
 transformers==4.31.0
 datasets==2.13.2
-torch==2.5.1
+torch==1.7.1
 scikit-learn==1.0.2
 pandas==1.3.5
 numpy==1.21.6
