--- a/PHEME-RNR/requirements.txt
+++ b/PHEME-RNR/requirements.txt
@@ -7,6 +7,7 @@ pandas==1.3.5
 numpy==1.22.0
 tensorflow==2.12.0
 streamlit==1.23.1
+gdown==4.7.1
 
 # Jupyter/IPython for notebooks
 notebook==6.4.0
